# LangLawyer

./: .clang-format  .conanignore  .gitignore  CMakeLists.txt  README.md  conanfile.py  decl-auto.cpp  type-constraint-auto.cpp
auto/: CMakeLists.txt  auto-deduce.cpp
build_process/: CMakeLists.txt  api.hpp  lib.cpp  main.cpp
libs/: CMakeLists.txt
libs/build_process/: CMakeLists.txt  api.hpp  lib.cpp
python_env/: pyproject.toml
snippets/: CMakeLists.txt
snippets/auto/: CMakeLists.txt  auto-deduce.cpp  decl-auto.cpp  type-constraint-auto.cpp
snippets/build_process/: CMakeLists.txt
toolchain/: README.md  conan-1-vs-2.md  conan-cmake.md
toolchain/hooks/: pre-commit  setup.sh
